# fringetree

./: .clang-format  CMakeLists.txt  Makefile  googletest
etc/: gcc-14-toolchain.cmake
fringetree/: CMakeLists.txt  fringetree.cpp  fringetree.h  fringetree.t.cpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.cpp
src/fringetree/: CMakeLists.txt  fringetree.h  fringetree.t.cpp
